# personal-dev-setup

./: .env.example  AGENTS.md  README.md  pyproject.toml
agent/: runner.py
agent/prompts/: implement.py  rework.py  spec.py
api/: main.py  signature.py
config/: settings.py
github/: client.py
graph/: edges.py  graph.py  state.py
graph/nodes/: collect_spec.py  handle_error.py  implement.py  rework.py
tests/: test_graph.py  test_prompts.py
traces/: schema.py  scorer.py  store.py
