[project]
name = "personal-dev-setup"
version = "0.1.0"
description = "My agentic personal dev setup based on Spec-Kit"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # LangGraph
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    # GitHub API
    "httpx>=0.27.0",
    # Config
    "pydantic-settings>=2.0.0",
    # Auth (GitHub App JWT)
    "pyjwt[crypto]>=2.8.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "msgpack>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "graph", "github", "agent", "traces", "persistence", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
